--- a/wp-content/themes/guny/src/scss/objects/_offcanvas.scss
+++ b/wp-content/themes/guny/src/scss/objects/_offcanvas.scss
@@ -8,6 +8,7 @@
   background: $color-text;
   min-height: 100%;
   position: relative;
+  z-index: 1;
 }
 
 // Off-Canvas Side
@@ -40,6 +41,19 @@
   visibility: hidden;
   z-index: 1;
 
+  @include media($bp-large) {
+    padding-top: 60px;
+  }
+}
+
+.js .is-open .o-offcanvas__side {
+  overflow: auto;
+  transition: transform .5s;
+  visibility: visible;
+  z-index: $z-index-offcanvas-side;
+}
+
+.js.csstransitions .o-offcanvas__side {
   &:after {
     background: rgba(0, 0, 0, .4);
     content: '';
@@ -51,17 +65,6 @@
     transition: opacity .5s;
     width: 100%;
   }
-
-  @include media($bp-large) {
-    padding-top: 60px;
-  }
-}
-
-.js .is-open .o-offcanvas__side {
-  overflow: auto;
-  transition: transform .5s;
-  visibility: visible;
-  z-index: 100;
 }
 
 .js.csstransitions .is-open .o-offcanvas__side {
@@ -97,7 +100,7 @@
   right: 0;
   position: relative;
   transition: right .5s;
-  z-index: 99;
+  z-index: $z-index-offcanvas-main;
 }
 
 .js .is-open .o-offcanvas__main {
@@ -130,5 +133,5 @@
   opacity: 1;
   transition: opacity .5s;
   width: 100%;
-  z-index: 100;
+  z-index: $z-index-offcanvas-overlay;
 }
